--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        
-          
+                  
         <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId> 
@@ -78,6 +77,7 @@
             <version>7.0</version>
             <type>jar</type>
         </dependency>
+        
     </dependencies>
 
     <build>
@@ -86,6 +86,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+        
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M6</version>
+            </plugin>   
         </plugins>
     </build>
 
