--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
     <properties>
         <java.version>1.8</java.version>
         <maven-jar-plugin-version>3.1.1</maven-jar-plugin-version>
+        <sonar.organization>osmarbraz</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>              
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>     
@@ -81,32 +86,28 @@
               
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.9.0-M1</version>
+            <artifactId>junit-jupiter-api</artifactId>            
             <scope>test</scope>
             <type>jar</type>
         </dependency>  
            
         <dependency>
             <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-suite-api</artifactId>
-            <version>1.9.0-M1</version>
+            <artifactId>junit-platform-suite-api</artifactId>            
             <scope>test</scope>
             <type>jar</type>
         </dependency>
         
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>5.8.2</version>
+            <artifactId>junit-jupiter-params</artifactId>            
             <scope>test</scope>
             <type>jar</type>
         </dependency>
         
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-junit-jupiter</artifactId>
-            <version>4.5.1</version>
+            <artifactId>mockito-junit-jupiter</artifactId>            
             <scope>test</scope>
         </dependency>
         
@@ -123,6 +124,28 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M6</version>
             </plugin>   
+            
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.8.8</version>                   
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>   
+            
         </plugins>
     </build>
 
