--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -10,28 +10,23 @@ on:
 jobs:
   # Jobs do ambiente de desenvolvimento
   build-dev:
-    # Runner com uma instância do ubuntu
+    # Runner com uma instância do ubuntu        
     runs-on: ubuntu-latest
     environment: 
       name: dev
-    # Compila com diversas versões do JDK
-    strategy:
-      matrix: 
-        java: [18]
-    name: build-dev - Teste com JDK ${{ matrix.java }}
     steps:
-    # Utiliza a action checkout para fazer o git clone no runner
+    # Utiliza a action checkout para fazer o git clone no runner    
     - name: Realiza o checkout do repositório
       uses: actions/checkout@v3
-     # Utiliza a action setup-java para configurar a versão necessária do JDK
-    - name: Configura o JDK ${{ matrix.java }}
+    # Utiliza a action setup-java para configurar a versão necessária do JDK
+    - name: Configura o JDK 18
       uses: actions/setup-java@v3
       with:
-        java-version: ${{ matrix.java }}
+        java-version: '18'
         distribution: 'temurin'
         cache: maven
-    # Executa a compilação e testes do projeto com o Maven no runner    
-    - name: Compila o projeto com Maven
+    # Executa os testes
+    - name: Testa o projeto com Maven
       run: mvn -B test --file pom.xml
   
  # Jobs do ambiente de homologação
@@ -105,7 +100,7 @@ jobs:
     - name: Crie uma pasta temporária(stating) de downloads de artefatos
       run: mkdir staging
     - name: Copia os artefatos a serem publicados na pasta temporária(stating)
-      run: cp target/*jar-with-dependencies.jar staging
+      run: cp target/*jar staging
     - name: Usa Upload Artifact do GitHub Action
       uses: actions/upload-artifact@v2
       with:
