--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,16 +29,15 @@ jobs:
     - name: Testa o projeto com Maven
       run: mvn -B test --file pom.xml
   
- # Jobs do ambiente de homologação
+  # Jobs do ambiente de homologação
   build-hmg:
-    # Runner com uma instância do ubuntu      
+    # Runner com uma instância do ubuntu        
     runs-on: ubuntu-latest
     environment: 
       name: hmg
     needs: build-dev
-    name: build-hmg - Análise do código
     steps:
-    # Utiliza a action checkout para fazer o git clone no runner
+    # Utiliza a action checkout para fazer o git clone no runner    
     - name: Realiza o checkout do repositório
       uses: actions/checkout@v3 
       with:
@@ -49,7 +48,7 @@ jobs:
       with:
         java-version: '18'
         distribution: 'temurin'
-        cache: maven     
+        cache: maven
     # Executa os passos da análise do código com o sonarcube     
     - name: Cache dos pacotes do SonarCloud
       uses: actions/cache@v1
@@ -66,26 +65,25 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-    # Executa a verificação do projeto com o Maven no runner    
+    # Executa a verificação do projeto com o Maven. 
     - name: Verifica o projeto com Maven e Jacoco
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}     
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=osmarbraz_cadastrocliente_webspring org.jacoco:jacoco-maven-plugin:prepare-agent -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml 
-                  
+  
   # Jobs do ambiente de produção
   build-prd:
-    # Runner com uma instância do ubuntu      
+    # Runner com uma instância do ubuntu        
     runs-on: ubuntu-latest
     environment: 
       name: prd
     needs: build-hmg
-    name: build-prd - Empacotamento
     steps:
-    # Utiliza a action checkout para fazer o git clone no runner        
+    # Utiliza a action checkout para fazer o git clone no runner    
     - name: Realiza o checkout do repositório
       uses: actions/checkout@v3
-    # Utiliza a action setup-java para configurar a versão necessária do JDK  
+    # Utiliza a action setup-java para configurar a versão necessária do JDK
     - name: Configura o JDK 18
       uses: actions/setup-java@v3
       with:
@@ -110,4 +108,4 @@ jobs:
         # Nome do arquivo a ser gerado
         name: Package-${{ runner.os }} #.zip será adicionado automaticamente
         # Caminho da pasta temporária (stating)
-        path: staging     
+        path: staging            
