--- a/pom.xml
+++ b/pom.xml
@@ -194,7 +194,7 @@
                 <version>3.2.1</version>
                 <configuration>
                     <from>
-                        <image>springbootjib</image>
+                        <image>openjdk:alpine</image>
                     </from>
                     <to>                        
                         <image>osmarbraz/cadastrocliente_webspring:${project.version}</image>
