--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     
     <groupId>com</groupId>
     <artifactId>cadastrocliente_webspring</artifactId>
-
+    <version>0.0.1</version>
     <name>cadastrocliente_webspring</name>
     <description>Exemplo CRUD Cliente Spring Boot</description>
 
