--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <artifactId>cadastrocliente_webspring</artifactId>
     <version>0.0.1</version>
     <name>cadastrocliente_webspring</name>
-    <description>Exemplo CRUD Cliente Spring Boot</description>
+    <description>Cadastro de Cliente utilizando Spring Boot</description>
 
     <properties>
         <sonar.organization>osmarbraz</sonar.organization>
