--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,13 @@
     <description>Cadastro de Cliente utilizando Spring Boot</description>
 
     <properties>
-        <sonar.organization>osmarbraz</sonar.organization>
-        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <sonar.organization>osmarbraz</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>        
         <sonar.coverage.exclusions>**/com/*Principal.*</sonar.coverage.exclusions> 
+        <sonar.sources>src/main/java,src/main/resources/templates</sonar.sources>
     </properties>
 
     <dependencies>
